--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 <head>
- <meta name="google-site-verification" content="uezgNj9cMUfUi7FaE-_l5cRgCqn6R5bLyayc8cCPkgc" />
+ <meta name="google-site-verification" 
+       content="<meta name="google-site-verification" content="uezgNj9cMUfUi7FaE-_l5cRgCqn6R5bLyayc8cCPkgc" /> />
+                                                                                    <title>Portfolio</title>                                                                                        
 </head>
 <body>
   <h3>helloworld</h3>
