--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <html>
 <head>
- <meta name="google-site-verification" 
-       content="<meta name="google-site-verification" content="uezgNj9cMUfUi7FaE-_l5cRgCqn6R5bLyayc8cCPkgc" /> />
-                                                                                    <title>Portfolio</title>                                                                                        
+  <meta charset="UTF-8">
+ <title>Intention</title>                                                                                 
 </head>
 <body>
-  <h3>helloworld</h3>
+  <h3>DIS IS MY PORTFOLIO WEBSITE AND IT IS UNDERDEVELOPMENT:))))</h3>
 </body>
 </html>
