--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <h3>DIS IS MY PORTFOLIO WEBSITE AND IT IS UNDERDEVELOPMENT:))))</h3>
   <h2>hello hello<h2>
 	  
-<a href="boltbus/index.html">boltbus</a>
+<a href="boltbus/index.html">Boltbus</a>
 <a href="stepUP/index.html">stepUP</a>
+<a href="TYR/index.html">TYR</a>
 </body>
 </html>
