added responsive meta tag
responsive meta tag

--- a/stepUP/index.html
+++ b/stepUP/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html><head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>stepUP</title>
 	<!--link to bootstrap-->	
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.theme.min.css">
