--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
                                                                                   
   </head>
   <body>
-
     <div class="container" id="menu" onclick="openNav()">
           <span class="burger"></span>
           <span class="burger"></span>
@@ -63,7 +62,7 @@
           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
           <a href="#">Work</a>
           <a href="about.html">About</a>
-          <a href="#">Contact</a>
+          <a href="contact.html">Contact</a>
     </div>
 
     <div id="fp-nav" class="fp-right">
