--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <meta name="description" content="This is a portfolio website of Boyu Zhang." />
+      <meta name="description" content="This is a portfolio website of Boyu Zhang." >
+      <meta name="keywords" content="Graphic Design,Web Design,branding,design,portfolio,illustration,HTML,CSS,XML,JavaScript">
+      <meta name="author" content="Boyu Zhang">
+
+
       <title>Boyu Zhang</title>
       <link rel="icon" href="img/icon.png">
       <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
