--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="description" content="This is a portfolio website of Boyu Zhang." >
-      <meta name="keywords" content="Graphic Design,Web Design,branding,design,portfolio,illustration,HTML,CSS,XML,JavaScript">
+      <meta name="keywords" content="Boyu Zhang,Graphic Design,Web Design,branding,design,portfolio,illustration,HTML,CSS,XML,JavaScript">
       <meta name="author" content="Boyu Zhang">
 
 
