--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Intention</title>
+        <meta name="description" content="This is a portfolio website of Boyu Zhang." >
+        <meta name="keywords" content="Boyu Zhang,Graphic Design,Web Design,branding,design,portfolio,illustration,HTML,CSS,XML,JavaScript">
+        <meta name="author" content="Boyu Zhang">
+
+
+        <title>Boyu Zhang</title>
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <script src="js/jquery-3.3.1.js"> </script>
@@ -42,7 +47,7 @@
 
         <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            <a href="#">Work</a>
+            <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
         </div>
