--- a/index.html
+++ b/index.html
@@ -48,10 +48,17 @@
       </div>
 
       <div class="section" id="container2">
-          
+          <div class="container" id="webdesignbanner">
+            <a class="banneranchor" href="webuxdesign.html"><h1>Web/UX Design</h1></a>
+
+
+          </div>
       </div>
       <div class="section" id="container3">
+          <div class="container" id="packagedesignbanner">
+            <a class="banneranchor" href="#"><h1>Packaging Design</h1></a>
 
+          </div>
       </div>
 
       <div class="section" id="container4">
@@ -65,7 +72,7 @@
 
     <div id="mySidenav" class="sidenav">
           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-          <a href="#">Work</a>
+          <a href="index.html">Home</a>
           <a href="about.html">About</a>
           <a href="contact.html">Contact</a>
     </div>
