finishing up the structure

--- a/about.html
+++ b/about.html
@@ -33,14 +33,18 @@
               
         </div>
         <div class="container-fluid" id="aboutme">
-            <h2 id="firstline">I am a designer and front end developer based in Seattle.</h2>
-            <h2>I make cool websites, Apps, illsutrations, identity designs.</h2>
-            <h2 id="thirdline">Check out my work <a href="#">here</a>, write me an email <a href="mailto:hello@boyuz.design">here</a></h2>
+            <img src="img/me2.png">
+            <h2 class="click" id="firstline">I am a product designer based in Seattle, Washington.<br> make websites, design apps, I also make illustrations, posters and prints.
+                <br>All sorts of cool stuff.<br>Some things I enjoy: learning new things, watching horror movies, paingting, gaming.
+                <br>Check out my resume<a href="#">here</a>:)
+            
         </div>
 
         <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <a href="index.html">Home</a>
+            <a href="webuxdesign.html">Web/UX Design</a>
+            <a href="#">Visual Design</a>
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
         </div>
