--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,8 @@
 
         <div class="container-fluid" id="contact">
             <h1>It's easy to get in touch with me.</h1>
-            <h2>Email: <a href="mailto:hello@boyuz.design">hello@boyuz.design</a> | Instagram: <a href="https://www.instagram.com/boyudesignz/">@boyudesignz</a></h2>
+            <h2 class="click">For any opportunities, inquiries, or hellos, write me an email <a href="mailto:hello@boyuz.design"> hello@boyuz.design</a>:)
+            <br>Follow me on Instagram<a href="http://www.instagram.com/boyudesignz">@boyudesignz</a> and Dribbble to check out my work!</h2>
             
 
 
@@ -48,6 +49,8 @@
         <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <a href="index.html">Home</a>
+            <a href="webuxdesign.html">Web/UX Design</a>
+            <a href="#">Visual Design</a>
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
         </div>
