--- a/stepup.html
+++ b/stepup.html
@@ -41,7 +41,7 @@
 
         <div class="container-fluid" id="stepup">
             <div class="col-sm-12 container" id="stepup_header">
-                <h1>StepUp--The fashion app</h1>
+                <h1 id="stepup_header_text">StepUp--The fashion app</h1>
             </div> 
             <div class="col-sm-12 container" id="stepup_intro">
                 <h2>Introduction</h2>
@@ -59,7 +59,7 @@
             <div class="row" id="stepup_problemsolution">
                 <div class="col-sm-6 container" id="stepup_problem">
                 
-                    <h2>Problem</h2>
+                    <h2>Problems</h2>
                     <p>Price is important concerns for freshly graduate people.
                         <br>Uncertainty about the dress code of the industry causes stress and affects performance.
                         <br>There is no easy way to compare and shop all the brands at once.
@@ -68,7 +68,7 @@
                 </div>
                 <div class="col-sm-6 container" id="stepup_solution">
 
-                    <h2>Solution</h2>
+                    <h2>Solutions</h2>
                     <p>Easy on-boarding process.
                         <br>Shop the best deals all year round.
                         <br>Discover items curated to users' industry and style.
@@ -232,7 +232,7 @@
             <div class="container col-sm-12" id="landingpage">
                 <h2 style="padding-left:5%;padding-bottom:1%;">The landing page</h2>
                 <div style="background-image:url(img/img_stepUP/landingpage.png);height:500px;text-align: center;background-size:cover;display:flex;align-items:center;justify-content: center;">
-                    <p style="background-color:#fd9167a8">We created a landing page for this app and it shows the users where to donwload StepUp, how the app works and tesmonials.
+                    <p style="background-color:#fd9167a8;border:2px solid rgb(20,20,20);padding:10px;">We created a landing page for this app and it shows the users where to donwload StepUp, how the app works and tesmonials.
                         <br>We also made a promo video!
                         <br>Click <a href="http://boyuz.design/stepUP/index.html">here</a> to see the full website.
                     </p>
@@ -274,7 +274,7 @@
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                 <a href="index.html">Home</a>
                 <a href="webuxdesign.html">Web/UX Design</a>
-                <a href="#">Visual Design</a>
+                <a href="visualdesign.html">Visual Design</a>
                 <a href="about.html">About</a>
                 <a href="contact.html">Contact</a>
         </div>
