--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <a href="index.html">Home</a>
             <a href="webuxdesign.html">Web/UX Design</a>
-            <a href="#">Visual Design</a>
+            <a href="visualdesign.html">Visual Design</a>
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
         </div>
