--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       </div>
       <div class="section" id="container3">
           <div class="container glitch3" id="packagedesignbanner">
-            <a class="banneranchor" href="#"><h1>Visual Design</h1></a>
+            <a class="banneranchor" href="visualdesign.html"><h1>Visual Design</h1></a>
 
           </div>
       </div>
@@ -76,7 +76,7 @@
           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
           <a href="index.html">Home</a>
           <a href="webuxdesign.html">Web/UX Design</a>
-          <a href="#">Visual Design</a>
+          <a href="visualdesign.html">Visual Design</a>
           <a href="about.html">About</a>
           <a href="contact.html">Contact</a>
     </div>
@@ -166,7 +166,6 @@
     </script>
 
     <script src="js/tilt.jquery.js"></script>
-
 
 
   </body>
