--- a/stepup.html
+++ b/stepup.html
@@ -270,14 +270,13 @@
 
 
 
-        <div id="mySidenav" class="sidenav">
+        <ul id="mySidenav" class="sidenav">
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-                <a href="index.html">Home</a>
-                <a href="webuxdesign.html">Web/UX Design</a>
-                <a href="visualdesign.html">Visual Design</a>
-                <a href="about.html">About</a>
-                <a href="contact.html">Contact</a>
-        </div>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="work.html">Work</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+          </ul>
 
 
 
